updated the landing page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+
+<head>
     <title>Josh Wiegand</title>
-  </head>
-  <body>
-    <h1>Josh Wiegand</h1>
-    <p>Landing page for Josh's personal website</p>
-  </body>
+    <meta name="author" content="Josh Wiegand">
+    <meta name="description" content="Personal Website of Josh Wiegand">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="main.css" rel="stylesheet">
+    <script src="https://use.typekit.net/vxz7vnv.js"></script>
+    <script src="https://use.fontawesome.com/13e6409ed2.js"></script>
+</head>
+
+<body>
+    <div class="background">
+        <div class="inner">
+            <h1 class="name">Programmer</h1>
+            <h2 class="tag">Working in DC</h2>
+            <ul class="links">
+                <li>
+                    <a href="http://www.twitter.com/joshrwiegand" target="_blank" class="link"><i class="fa fa-twitter fa-lg fa-fw" aria-hidden="false"></i></a>
+                </li>
+                <li>
+                    <a href="https://github.com/jrwiegand" target="_blank" class="link"><i class="fa fa-github fa-lg fa-fw" aria-hidden="false"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/jrwiegand" target="_blank" class="link"><i class="fa fa-linkedin fa-lg fa-fw" aria-hidden="true"></i></a>
+                </li>
+                <li class="email-link">
+                    <a href="mailto:me@joshwiegand.com" target="_blank" class="email">me@joshwiegand.com</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</body>
+
 </html>
