changed forwarding email address

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="https://www.linkedin.com/in/jrwiegand" target="_blank" class="link"><i class="fa fa-linkedin fa-lg fa-fw" aria-hidden="true"></i></a>
                 </li>
                 <li class="email-link">
-                    <a href="mailto:me@joshwiegand.com" target="_blank" class="email">me@joshwiegand.com</a>
+                    <a href="mailto:mail@joshwiegand.com" target="_blank" class="email">mail@joshwiegand.com</a>
                 </li>
             </ul>
         </div>
