changed the class name 'name' -> 'title'

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="background">
         <div class="inner">
-            <h1 class="name">Programmer</h1>
+            <h1 class="title">Programmer</h1>
             <h2 class="tag">Working in DC</h2>
             <ul class="links">
                 <li>
