updated to display fonts properly on mobile devices

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="main.css" rel="stylesheet">
     <script src="https://use.typekit.net/vxz7vnv.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="https://use.fontawesome.com/13e6409ed2.js"></script>
 </head>
 
 <body>
     <div class="background">
         <div class="inner">
-            <h1 class="title">Programmer</h1>
+            <h1 class="title">Athlete &amp; Builder</h1>
             <h2 class="tag">Working in DC</h2>
             <ul class="links">
                 <li>
