--- a/index.html
+++ b/index.html
@@ -17,21 +17,28 @@
     h6 {
         font-family: "Ubuntu", sans-serif
     }
+
+    img:hover {
+        filter: none;
+        -webkit-filter: grayscale(0%);
+    }
+
+    a {
+        text-decoration: none;
+    }
 </style>
 
-<body>
+<body class="w3-content" style="max-width:60%">
     <!-- Page Content -->
-    <div class="w3-content" style="max-width:1500px">
-        <div class="w3-panel w3-center" style="padding:128px 16px">
-            <img src="profile.jpg" class="w3-circle" width="100" height="100" alt="me">
-
+    <div class="w3-container w3-center">
+        <div class="w3-panel" style="padding:128px 16px">
+            <img class="w3-image w3-circle w3-grayscale-max" src="profile.jpg" width="100" height="100" alt="me">
             <div class="w3-padding-32">
                 <div class="w3-bar">
-                    <a href="#" class="w3-bar-item w3-mobile">Portfolio</a>
-                    <a href="#" class="w3-bar-item w3-mobile">Resume</a>
-                    <a href="#" class="w3-bar-item w3-mobile">Mail Me!</a>
+                    <a href="#" class="w3-bar-item w3-mobile w3-hover-text-green">Resume</a>
+                    <a href="#" class="w3-bar-item w3-mobile w3-hover-text-blue">Mail Me!</a>
                 </div>
-                <div>
+                <div class="w3-left-align">
                     <p>
                         I'm Josh Wiegand, an engineer. I love all things sports & tech. For more check out my resume. Contact me via the links below.
                     </p>
