--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     }
 </style>
 
-<body class="w3-content" style="max-width:50%">
+<body class="w3-content" style="max-width:800px">
     <!-- Page Content -->
     <div class="w3-container w3-center">
         <div class="w3-panel" style="padding:128px 16px">
@@ -82,8 +82,8 @@
                     <p>
                         Hello! I'm Josh Wiegand, a sports &amp; tech geek, living in Maryland &amp; working in Baltimore. I'm currently a senior
                         dev at
-                        <a class="w3-bar-item w3-mobile hover-text-stansberry" target="_blank" href="https://stansberryresearch.com">Stansberry Research</a>, previously at
-                        <a class="w3-bar-item w3-mobile hover-text-nrl" target="_blank" href="https://www.nrl.navy.mil">Naval Research Lab</a>.
+                        <a class="w3-bar-item w3-mobile hover-text-stansberry" style="display: inline;" target="_blank" href="https://stansberryresearch.com">Stansberry Research</a>, previously at
+                        <a class="w3-bar-item w3-mobile hover-text-nrl" style="display: inline;" target="_blank" href="https://www.nrl.navy.mil">Naval Research Lab</a>.
                     </p>
                     <p>
                         I'm all about simple, clean code that runs at the speed of light and makes people's lives better. Sports, specifically basketball,
@@ -91,31 +91,79 @@
                     </p>
                     <p>
                         While I'm not currently exploring for new opportunities, I love to hear about new big ideas.
-                        <a class="w3-bar-item w3-mobile hover-text-blue" target="_blank" href="mailto:hi@joshwiegand.com">Send me an electronic message.</a>
+                        <a class="w3-bar-item w3-mobile hover-text-blue" style="display: inline;" target="_blank" href="mailto:hi@joshwiegand.com">Send me an electronic message.</a>
                     </p>
                 </div>
-                <div class="w3-bar">
-                    <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
-                        <i class="fab fa-linkedin fa-lg fa-fw" aria-hidden="true"></i>
-                    </a>
-                    <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
-                        <i class="fab fa-github fa-lg fa-fw" aria-hidden="true"></i>
-                    </a>
-                    <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
-                        <i class="fab fa-stack-overflow fa-lg fa-fw" aria-hidden="true"></i>
-                    </a>
+                <div class="w3-hide-small">
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
+                            <i class="fab fa-linkedin fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
+                            <i class="fab fa-github fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
+                            <i class="fab fa-stack-overflow fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
+                            <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
+                            <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
+                            <i class="fab fa-reddit fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="w3-bar">
-                    <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
-                        <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true"></i>
-                    </a>
-                    <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
-                        <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true"></i>
-                    </a>
-                    <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
-                        <i class="fab fa-reddit fa-lg fa-fw" aria-hidden="true"></i>
-                    </a>
+                <div class="w3-hide-medium w3-hide-large">
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
+                            LinkedIn
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
+                            GitHub
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
+                            Stack Overflow
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
+                            Twitter
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
+                            Instagram
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
+                            Reddit
+                        </a>
+                    </div>
                 </div>
+                <!-- <div class="w3-hide-medium w3-hide-large">
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
+                            <i class="fab fa-linkedin fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
+                            <i class="fab fa-github fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
+                            <i class="fab fa-stack-overflow fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
+                            <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
+                            <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
+                            <i class="fab fa-reddit fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div> -->
             </div>
         </div>
     </div>
