updated color link for NRL

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
 
     .hover-text-nrl:hover {
-        color: #ffc400 !important
+        color: #172a55 !important
     }
 
     .hover-text-github:hover {
