--- a/index.html
+++ b/index.html
@@ -76,22 +76,28 @@
             <div class="w3-padding-32">
                 <div class="w3-bar">
                     <a class="w3-bar-item w3-mobile hover-text-green" target="_blank" href="https://docs.google.com/document/d/1JDadvcHA9-DJbFYqVWkL8r0vVA_V7rKn-Xte3RM1XqQ/edit?usp=sharing">Resume</a>
-                    <a class="w3-bar-item w3-mobile hover-text-blue" target="_blank" href="mailto:hi@joshwiegand.com">Mail Me!</a>
+                    <a class="w3-bar-item w3-mobile hover-text-blue" target="_blank" href="mailto:hi@joshwiegand.com">Mail
+                        Me!</a>
                 </div>
                 <div class="w3-left-align">
                     <p>
-                        Hello! I'm Josh Wiegand, a sports &amp; tech geek, living in Maryland &amp; working in Baltimore. I'm currently a senior
+                        Hello! I'm Josh Wiegand, a sports &amp; tech geek, living in Maryland &amp; working in
+                        Baltimore. I'm currently a senior
                         dev at
-                        <a class="w3-bar-item w3-mobile hover-text-stansberry" style="display: inline;" target="_blank" href="https://stansberryresearch.com">Stansberry Research</a>, previously at
-                        <a class="w3-bar-item w3-mobile hover-text-nrl" style="display: inline;" target="_blank" href="https://www.nrl.navy.mil">Naval Research Lab</a>.
+                        <a class="w3-bar-item w3-mobile hover-text-stansberry" style="display: inline;" target="_blank"
+                            href="https://stansberryresearch.com">Stansberry Research</a>, previously at
+                        <a class="w3-bar-item w3-mobile hover-text-nrl" style="display: inline;" target="_blank" href="https://www.nrl.navy.mil">Naval
+                            Research Lab</a>.
                     </p>
                     <p>
-                        I'm all about simple, clean code that runs at the speed of light and makes people's lives better. Sports, specifically basketball,
+                        I'm all about simple, clean code that runs at the speed of light and makes people's lives
+                        better. Sports, specifically basketball,
                         are a passion that I'm sure will never end.
                     </p>
                     <p>
                         While I'm not currently exploring for new opportunities, I love to hear about new big ideas.
-                        <a class="w3-bar-item w3-mobile hover-text-blue" style="display: inline;" target="_blank" href="mailto:hi@joshwiegand.com">Send me an electronic message.</a>
+                        <a class="w3-bar-item w3-mobile hover-text-blue" style="display: inline;" target="_blank" href="mailto:hi@joshwiegand.com">Send
+                            me an electronic message.</a>
                     </p>
                 </div>
                 <div class="w3-hide-small">
@@ -138,32 +144,6 @@
                         </a>
                     </div>
                 </div>
-                <!-- <div class="w3-hide-medium w3-hide-large">
-                    <div class="w3-bar">
-                        <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
-                            <i class="fab fa-linkedin fa-lg fa-fw" aria-hidden="true"></i>
-                        </a>
-                        <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
-                            <i class="fab fa-github fa-lg fa-fw" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="w3-bar">
-                        <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
-                            <i class="fab fa-stack-overflow fa-lg fa-fw" aria-hidden="true"></i>
-                        </a>
-                        <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
-                            <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="w3-bar">
-                        <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
-                            <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true"></i>
-                        </a>
-                        <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
-                            <i class="fab fa-reddit fa-lg fa-fw" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
