--- a/index.html
+++ b/index.html
@@ -1,38 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<title>Josh Wiegand</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
+<style>
+    html,
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: "Ubuntu", sans-serif
+    }
 
-<head>
-    <title>Josh Wiegand</title>
-    <meta name="author" content="Josh Wiegand">
-    <meta name="description" content="Personal Website of Josh Wiegand">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="main.css" rel="stylesheet">
-    <script src="https://use.typekit.net/vxz7vnv.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
-    <script src="https://use.fontawesome.com/13e6409ed2.js"></script>
-</head>
+    img:hover {
+        filter: none;
+        -webkit-filter: grayscale(0%);
+    }
 
-<body>
-    <div class="background">
-        <div class="inner">
-            <h1 class="title">Athlete &amp; Builder</h1>
-            <h2 class="tag">Working in DC</h2>
-            <ul class="links">
-                <li>
-                    <a href="http://www.twitter.com/joshrwiegand" target="_blank" class="link"><i class="fa fa-twitter fa-lg fa-fw" aria-hidden="false"></i></a>
-                </li>
-                <li>
-                    <a href="https://github.com/jrwiegand" target="_blank" class="link"><i class="fa fa-github fa-lg fa-fw" aria-hidden="false"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/jrwiegand" target="_blank" class="link"><i class="fa fa-linkedin fa-lg fa-fw" aria-hidden="true"></i></a>
-                </li>
-                <li class="email-link">
-                    <a href="mailto:mail@joshwiegand.com" target="_blank" class="email">mail@joshwiegand.com</a>
-                </li>
-            </ul>
+    a {
+        text-decoration: none;
+    }
+
+    .hover-text-green:hover {
+        color: #4CAF50 !important
+    }
+
+    .hover-text-blue:hover {
+        color: #2196F3 !important
+    }
+
+    .hover-text-stansberry:hover {
+        color: #0f75ce !important
+    }
+
+    .hover-text-nrl:hover {
+        color: #172a55 !important
+    }
+
+    .hover-text-github:hover {
+        color: #6cc644 !important
+    }
+
+    .hover-text-stack-overflow:hover {
+        color: #f48024 !important
+    }
+
+    .hover-text-linkedin:hover {
+        color: #0077b5 !important
+    }
+
+    .hover-text-twitter:hover {
+        color: #1da1f2 !important
+    }
+
+    .hover-text-instagram:hover {
+        color: #8a3ab9 !important
+    }
+
+    .hover-text-reddit:hover {
+        color: #ff4500 !important
+    }
+</style>
+
+<body class="w3-content" style="max-width:800px">
+    <!-- Page Content -->
+    <div class="w3-container w3-center">
+        <div class="w3-panel" style="padding:128px 16px">
+            <img class="w3-image w3-circle w3-grayscale-max" src="profile.jpg" width="100" height="100" alt="me">
+            <div class="w3-padding-32">
+                <div class="w3-bar">
+                    <a class="w3-bar-item w3-mobile hover-text-green" target="_blank" href="https://docs.google.com/document/d/1JDadvcHA9-DJbFYqVWkL8r0vVA_V7rKn-Xte3RM1XqQ/edit?usp=sharing">Resume</a>
+                    <a class="w3-bar-item w3-mobile hover-text-blue" target="_blank" href="mailto:hi@joshwiegand.com">Mail
+                        Me!</a>
+                </div>
+                <div class="w3-left-align">
+                    <p>
+                        Hello! I'm Josh Wiegand, a sports &amp; tech geek, living in Maryland &amp; working in
+                        Baltimore. I'm currently a senior
+                        dev at
+                        <a class="w3-bar-item w3-mobile hover-text-stansberry" style="display: inline;" target="_blank"
+                            href="https://stansberryresearch.com">Stansberry Research</a>, previously at
+                        <a class="w3-bar-item w3-mobile hover-text-nrl" style="display: inline;" target="_blank" href="https://www.nrl.navy.mil">Naval
+                            Research Lab</a>.
+                    </p>
+                    <p>
+                        I'm all about simple, clean code that runs at the speed of light and makes people's lives
+                        better. Sports, specifically basketball,
+                        are a passion that I'm sure will never end.
+                    </p>
+                    <p>
+                        While I'm not currently exploring for new opportunities, I love to hear about new big ideas.
+                        <a class="w3-bar-item w3-mobile hover-text-blue" style="display: inline;" target="_blank" href="mailto:hi@joshwiegand.com">Send
+                            me an electronic message.</a>
+                    </p>
+                </div>
+                <div class="w3-hide-small">
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
+                            <i class="fab fa-linkedin fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
+                            <i class="fab fa-github fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
+                            <i class="fab fa-stack-overflow fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
+                            <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
+                            <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
+                            <i class="fab fa-reddit fa-lg fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="w3-hide-medium w3-hide-large">
+                    <div class="w3-bar">
+                        <a class="w3-bar-item w3-mobile hover-text-linkedin" href="https://linkedin.com/in/jrwiegand">
+                            LinkedIn
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-github" href="https://github.com/jrwiegand">
+                            GitHub
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-stack-overflow" href="https://www.stackoverflow.com/users/2456998/josh-wiegand">
+                            Stack Overflow
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-twitter" href="https://twitter.com/joshrwiegand">
+                            Twitter
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-instagram" href="https://www.instagram.com/josh.wiegand">
+                            Instagram
+                        </a>
+                        <a class="w3-bar-item w3-mobile hover-text-reddit" href="https://www.reddit.com/user/josh-wiegand">
+                            Reddit
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
