changed email; removed CNAME; cleaned readme

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </p>
                     <p>
                         While I'm not currently exploring for new opportunities, I love to hear about new big ideas.
-                        <a class="w3-bar-item w3-mobile hover-text-blue" style="display: inline;" target="_blank" href="mailto:hi@joshwiegand.com">Send
+                        <a class="w3-bar-item w3-mobile hover-text-blue" style="display: inline;" target="_blank" href="mailto:mail@joshwiegand.com">Send
                             me an electronic message.</a>
                     </p>
                 </div>
